# trnsparse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_bsr_spmm.py  bench_iterative.py  bench_screening.py  bench_spmm.py  bench_spmv.py  conftest.py
docs/: api.md  architecture.md  aws_setup.md  benchmarks.md  index.md  installation.md  iterative_solvers.md  migration_scipy.md  quickstart.md  sparse_attention.md
examples/: block_sparse_attention.py  sparse_fock.py
infra/terraform/: README.md  main.tf
scripts/: bench_to_md.py  run_benchmarks.sh  run_neuron_tests.sh  run_simulator_tests.sh
tests/: conftest.py  test_attention.py  test_bsr.py  test_examples.py  test_formats.py  test_iterative.py  test_nki_attn.py  test_nki_bsr.py  test_nki_screened_spmm.py  test_nki_sim.py  test_nki_spmm.py  test_ops.py  test_screening.py
trnsparse/: __init__.py  formats.py  iterative.py  ops.py  screening.py
trnsparse/nki/: __init__.py  dispatch.py  kernels.py
